<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.github.tekisho</groupId>
    <artifactId>JPingPong</artifactId>
    <version>1.0-SNAPSHOT</version>
    <name>PingPongGame</name>
    <description>2D Ping-Pong written in Java with JavaFX</description>
    <url>https://github.com/Tekisho/JPingPong</url>

    <licenses>
        <license>
            <name>MIT license</name>
            <url>https://github.com/Tekisho/JPingPong/blob/main/LICENSE.md</url>
        </license>
    </licenses>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.apidocs.basedir>docs</project.apidocs.basedir>

        <junit.version>5.10.2</junit.version>
        <javafx.version>21.0.10</javafx.version>
        <java.version>21</java.version>
        <javadoc.version>3.12.0</javadoc.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${javafx.version}</version>
        </dependency>

        <!-- Sqlite jdbc driver  -->
        <!-- Source: https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc -->
        <dependency>
            <groupId>org.xerial</groupId>
            <artifactId>sqlite-jdbc</artifactId>
            <version>3.51.3.0</version>
            <scope>compile</scope>
        </dependency>

        <!-- Source: https://mvnrepository.com/artifact/com.pixelduke/fxthemes -->
        <dependency>
            <groupId>com.pixelduke</groupId>
            <artifactId>fxthemes</artifactId>
            <version>1.6.0</version>
            <scope>compile</scope>
        </dependency>

        <!-- To omit "Failed to load class org.slf4j.impl.StaticLoggerBinder" warning (see https://www.slf4j.org/codes.html#StaticLoggerBinder) from using OJDBC driver -->
        <!-- Source: https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>2.0.17</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-javadoc-plugin</artifactId>
            <version>${javadoc.version}</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>
                <executions>
                    <execution>
                        <!-- Default configuration for running with: mvn clean javafx:run -->
                        <id>default-cli</id>
                        <configuration>
                            <mainClass>io.github.tekisho.pingponggame/io.github.tekisho.pingponggame.Main</mainClass>
                            <launcher>app</launcher>
                            <jlinkZipName>app</jlinkZipName>
                            <jlinkImageName>app</jlinkImageName>
                            <noManPages>true</noManPages>
                            <stripDebug>true</stripDebug>
                            <noHeaderFiles>true</noHeaderFiles>
                            <options>
                                <!-- So that changing the background of a native Window works well (at least on some machines using win11) -->
                                <option>-Dprism.forceUploadingPainter=${forceUploadingPainter}</option>
                                <!-- For getting the native window handle (WindowUtils.getNativeHandleForStage method) -->
                                <option>--add-opens</option>
                                <option>javafx.graphics/javafx.stage=com.pixelduke.fxthemes</option>
                                <option>--add-exports</option>
                                <option>javafx.graphics/com.sun.javafx.tk.quantum=com.pixelduke.fxthemes</option>
                            </options>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>${javadoc.version}</version>
                <configuration>
                    <tags>
                        <tag>
                            <name>implNote</name>
                            <placement>a</placement>
                            <head>Implementation Note:</head>
                        </tag>
                        <tag>
                            <name>apiNote</name>
                            <placement>a</placement>
                            <head>API Note:</head>
                        </tag>
                    </tags>
                    <show>private</show>
<!--                    <additionalOptions>&#45;&#45;show-packages all</additionalOptions>-->
                    <outputDirectory>${project.apidocs.basedir}</outputDirectory>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>